The Beauty title added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
 <h1 class="blue-heading" id="special-heading">Cool</h1>
 <h6>I'm the least important</h6>
 <h2 class="blue-heading">Dead Moroz</h2>
-
+<h1> hi </h1>
+<h1 id="title">the Beauty</h1>
