created a cool folder

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,15 @@
-<h1>I'm the most important</h1>
-<h2>I'm less important</h2>
-<h1 class="blue-heading" id="special-heading">Cool</h1>
-<h6>I'm the least important</h6>
-<h2 class="blue-heading">Dead Moroz</h2>
-<h1> hi </h1>
-<h1 id="title">the Beauty</h1>
+
+<details> 
+    <summary class="summary-toggle"> 
+      HTML Basic elements
+    </summary>
+    <div> 
+        <h1>I'm the most important</h1>
+        <h2>I'm less important</h2>
+        <h1 class="blue-heading" id="special-heading">Cool</h1>
+        <h6>I'm the least important</h6>
+        <h2 class="blue-heading">Dead Moroz</h2>
+        <h1> hi </h1>
+        <h1 id="title">the Beauty</h1>
+    </div>
+</details>0
